# 2024-spring-ab-python-ads-HW-4

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile copy  Makefile  README.md  __init__.py  app.Dockerfile  database.sql  detector.db  docker-compose.yaml  docker-compose.yml  pg.Dockerfile  pyproject.toml  readme.md  requirements.txt
app/: .env  Dockerfile  database.py  main.py  model_predict.py  models.py  requirements.txt  schemas.py  sql_models.py
app/api/: cities_router.py  trees_router.py
app/config/: config.py
app/database/: db.py  db_utils.py  models.py
app/db/: Dockerfile  freq_city.sql
app/schemas/: schema.py
app/services/: cities_service.py  trees_service.py
app/sql/: queries.py
app/sql/scripts/: create_procedure.sql  init_table.sql  stored_procedure.sql
db/: init.sql
db/procedures/: most_requested_sity.sql
postgres-custom/: Dockerfile
tests/: test_app.py
